# rendersystem-qt-opengl-

./: .gitignore  CMakeLists.txt  README.md
assets/config/: scene.json
assets/shaders/: debug.frag  debug.vert  scene.frag  scene.vert
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.hpp  MainWindowUi.cpp  ModelLoader.cpp  ModelLoader.hpp  RenderBackendTypes.hpp  RenderMath.hpp  RenderMeshUtils.cpp  RenderMeshUtils.hpp  RenderResourceManager.cpp  RenderResourceManager.hpp  RenderSceneBackend.cpp  RenderSceneBackend.hpp  RenderSceneCompiler.cpp  RenderSceneCompiler.hpp  RenderViewportHelpers.cpp  RenderViewportHelpers.hpp  RenderWidget.cpp  RenderWidget.hpp  SceneConfig.cpp  SceneConfig.hpp  SceneDocument.cpp  SceneDocument.hpp  SceneEditorService.cpp  SceneEditorService.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneRenderer.cpp  SceneRenderer.hpp
